update login with token
